--- a/_posts/ar-sa/2024-07-05-happiness2.md
+++ b/_posts/ar-sa/2024-07-05-happiness2.md
@@ -23,4 +23,4 @@ images:
 
 وقد ذكرت المسؤولية لأهميتها ، فمن الضروري الأخذ بعين الاعتبار الكثير من العوامل والأشخاص المتأثرين معنا في ذلك القرار. كالظروف المادية للأسرة والعائلة في المثال السابق والأبناء في المثال الذي يسبقه.
 
-ختاماً ، عزيزي القارئ ، فإن أفضل طريقة لبناء علاقات أقوى والاستمتاع بحياة أكثر سعادة واستقراراً معتمد على قراراتنا التي نتخذها وسلوكياتنا التي نتبعها ، ولأفضل النتائج نحتاج أن نفهم أنفسنا أولاً ونفهم الآخرين بأفضل ما يمكن وماهية الخيارات المتاحة ونتائجها على أنفسنا وعلى الآخرين ، لاتخاذ القرار واختيار الخيار الذي يسهم في استقرارنا وتحسين علاقاتنا الاجتماعية وظروفنا المستقبلية ، حتى لو نتج عن ذلك خروجنا من منطقة الراحة مؤقتاً ، أو نتج عنه عيش ألم ومعاناة مؤقتة. فقرار طلب العلم ، مثلاً ، قد ينتج عنه ألم مؤقت نتيجة للتفرغ للدراسة ، والتحضير للدراسة والتقييمات ونتائجها ، لكن كما قيل في الأثر ، من أراد الدنيا فعليه بالعلم ، ومن أراد الآخرة فعليه بالعلم ، ومن أرادهما معاً فعليه بالعلم.
+ختاماً ، عزيزي القارئ ، فإن أفضل طريقة لبناء علاقات أقوى والاستمتاع بحياة أكثر سعادة واستقراراً معتمد على قراراتنا التي نتخذها وسلوكياتنا التي نتبعها ، ولأفضل النتائج نحتاج أن نفهم أنفسنا أولاً ونفهم الآخرين بأفضل ما يمكن وماهية الخيارات المتاحة ونتائجها على أنفسنا وعلى الآخرين ، لاتخاذ القرار واختيار الخيار الذي يسهم في استقرارنا وتحسين علاقاتنا الاجتماعية وظروفنا المستقبلية ، حتى لو نتج عن ذلك خروجنا من منطقة الراحة مؤقتاً ، أو نتج عنه عيش ألم ومعاناة مؤقتة. فقرار طلب العلم ، مثلاً ، قد ينتج عنه ألم مؤقت نتيجة للتفرغ للدراسة ، والتحضير للدراسة والتقييمات ونتائجها ، لكن كما قيل في الأثر ، من أراد الدنيا فعليه بالعلم ، ومن أراد الآخرة فعليه بالعلم ، ومن أرادهما معاً فعليه بالعلم. والله الموفق والمستعان.
