Adding papers at ACL

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,69 @@
 @string{aps = {American Physical Society,}}
 
+@inproceedings{hariri-abu-farha-2024-smash,
+    title = "{SMASH} at {A}ra{F}in{NLP}2024: Benchmarking {A}rabic {BERT} Models on the Intent Detection",
+    author = "Hariri, Youssef  and
+      Abu Farha, Ibrahim",
+    editor = "Habash, Nizar  and
+      Bouamor, Houda  and
+      Eskander, Ramy  and
+      Tomeh, Nadi  and
+      Abu Farha, Ibrahim  and
+      Abdelali, Ahmed  and
+      Touileb, Samia  and
+      Hamed, Injy  and
+      Onaizan, Yaser  and
+      Alhafni, Bashar  and
+      Antoun, Wissam  and
+      Khalifa, Salam  and
+      Haddad, Hatem  and
+      Zitouni, Imed  and
+      AlKhamissi, Badr  and
+      Almatham, Rawan  and
+      Mrini, Khalil",
+    booktitle = "Proceedings of The Second Arabic Natural Language Processing Conference",
+    month = aug,
+    year = "2024",
+    address = "Bangkok, Thailand",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2024.arabicnlp-1.35",
+    pages = "403--409",
+    abstract = "The recent growth in Middle Eastern stock markets has intensified the demand for specialized financial Arabic NLP models to serve this sector. This article presents the participation of Team SMASH of The University of Edinburgh in the Multi-dialect Intent Detection task (Subtask 1) of the Arabic Financial NLP (AraFinNLP) Shared Task 2024. The dataset used in the shared task is the ArBanking77 (Jarrar et al., 2023). We tackled this task as a classification problem and utilized several BERT and BART-based models to classify the queries efficiently. Our solution is based on implementing a two-step hierarchical classification model based on MARBERTv2. We fine-tuned the model by using the original queries. Our team, SMASH, was ranked 9th with a macro F1 score of 0.7866, indicating areas for further refinement and potential enhancement of the model{'}s performance.",
+}
+
+
+@inproceedings{hariri-abu-farha-2024-smash-stanceeval,
+    title = "{SMASH} at {S}tance{E}val 2024: Prompt Engineering {LLM}s for {A}rabic Stance Detection",
+    author = "Hariri, Youssef  and
+      Abu Farha, Ibrahim",
+    editor = "Habash, Nizar  and
+      Bouamor, Houda  and
+      Eskander, Ramy  and
+      Tomeh, Nadi  and
+      Abu Farha, Ibrahim  and
+      Abdelali, Ahmed  and
+      Touileb, Samia  and
+      Hamed, Injy  and
+      Onaizan, Yaser  and
+      Alhafni, Bashar  and
+      Antoun, Wissam  and
+      Khalifa, Salam  and
+      Haddad, Hatem  and
+      Zitouni, Imed  and
+      AlKhamissi, Badr  and
+      Almatham, Rawan  and
+      Mrini, Khalil",
+    booktitle = "Proceedings of The Second Arabic Natural Language Processing Conference",
+    month = aug,
+    year = "2024",
+    address = "Bangkok, Thailand",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2024.arabicnlp-1.92",
+    pages = "800--806",
+    abstract = "This paper presents our submission for the Stance Detection in Arabic Language (StanceEval) 2024 shared task conducted by Team SMASH of the University of Edinburgh. We evaluated the performance of various BERT-based and large language models (LLMs). MARBERT demonstrates superior performance among the BERT-based models, achieving F1 and macro-F1 scores of 0.570 and 0.770, respectively. In contrast, Command R model outperforms all models with the highest overall F1 score of 0.661 and macro F1 score of 0.820.",
+}
+
+
 @InProceedings{haririmagdywolters2019,
 author="Al Hariri, Youssef
 and Magdy, Walid
