update published works

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,10 +1,9 @@
 @string{aps = {American Physical Society,}}
 
 @inproceedings{hariri-abu-farha-2024-smash,
-    title = "{SMASH} at {A}ra{F}in{NLP}2024: Benchmarking {A}rabic {BERT} Models on the Intent Detection",
-    author = "Hariri, Youssef  and
-      Abu Farha, Ibrahim",
-    editor = "Habash, Nizar  and
+    title = {SMASH at AraFinNLP2024: Benchmarking Arabic BERT Models on the Intent Detection},
+    author = {Al Hariri, Youssef  and Abu Farha, Ibrahim},
+    editor = {Habash, Nizar  and
       Bouamor, Houda  and
       Eskander, Ramy  and
       Tomeh, Nadi  and
@@ -20,23 +19,23 @@
       Zitouni, Imed  and
       AlKhamissi, Badr  and
       Almatham, Rawan  and
-      Mrini, Khalil",
-    booktitle = "Proceedings of The Second Arabic Natural Language Processing Conference",
+      Mrini, Khalil},
+    booktitle = {Proceedings of The Second Arabic Natural Language Processing Conference},
     month = aug,
-    year = "2024",
-    address = "Bangkok, Thailand",
-    publisher = "Association for Computational Linguistics",
-    url = "https://aclanthology.org/2024.arabicnlp-1.35",
-    pages = "403--409",
-    abstract = "The recent growth in Middle Eastern stock markets has intensified the demand for specialized financial Arabic NLP models to serve this sector. This article presents the participation of Team SMASH of The University of Edinburgh in the Multi-dialect Intent Detection task (Subtask 1) of the Arabic Financial NLP (AraFinNLP) Shared Task 2024. The dataset used in the shared task is the ArBanking77 (Jarrar et al., 2023). We tackled this task as a classification problem and utilized several BERT and BART-based models to classify the queries efficiently. Our solution is based on implementing a two-step hierarchical classification model based on MARBERTv2. We fine-tuned the model by using the original queries. Our team, SMASH, was ranked 9th with a macro F1 score of 0.7866, indicating areas for further refinement and potential enhancement of the model{'}s performance.",
+    year = {2024},
+    address = {Bangkok, Thailand},
+    publisher = {Association for Computational Linguistics},
+    html = {https://aclanthology.org/2024.arabicnlp-1.35},
+    pages = {403-409},
+    abstract = {The recent growth in Middle Eastern stock markets has intensified the demand for specialized financial Arabic NLP models to serve this sector. This article presents the participation of Team SMASH of The University of Edinburgh in the Multi-dialect Intent Detection task (Subtask 1) of the Arabic Financial NLP (AraFinNLP) Shared Task 2024. The dataset used in the shared task is the ArBanking77 (Jarrar et al., 2023). We tackled this task as a classification problem and utilized several BERT and BART-based models to classify the queries efficiently. Our solution is based on implementing a two-step hierarchical classification model based on MARBERTv2. We fine-tuned the model by using the original queries. Our team, SMASH, was ranked 9th with a macro F1 score of 0.7866, indicating areas for further refinement and potential enhancement of the model{'}s performance.},
+    selected=true,
 }
 
 
 @inproceedings{hariri-abu-farha-2024-smash-stanceeval,
-    title = "{SMASH} at {S}tance{E}val 2024: Prompt Engineering {LLM}s for {A}rabic Stance Detection",
-    author = "Hariri, Youssef  and
-      Abu Farha, Ibrahim",
-    editor = "Habash, Nizar  and
+    title = {SMASH at StanceEval 2024: Prompt Engineering LLMs for Arabic Stance Detection},
+    author = {Al Hariri, Youssef  and Abu Farha, Ibrahim},
+    editor = {Habash, Nizar  and
       Bouamor, Houda  and
       Eskander, Ramy  and
       Tomeh, Nadi  and
@@ -52,22 +51,21 @@
       Zitouni, Imed  and
       AlKhamissi, Badr  and
       Almatham, Rawan  and
-      Mrini, Khalil",
-    booktitle = "Proceedings of The Second Arabic Natural Language Processing Conference",
+      Mrini, Khalil},
+    booktitle = {Proceedings of The Second Arabic Natural Language Processing Conference},
     month = aug,
-    year = "2024",
-    address = "Bangkok, Thailand",
-    publisher = "Association for Computational Linguistics",
-    url = "https://aclanthology.org/2024.arabicnlp-1.92",
-    pages = "800--806",
-    abstract = "This paper presents our submission for the Stance Detection in Arabic Language (StanceEval) 2024 shared task conducted by Team SMASH of the University of Edinburgh. We evaluated the performance of various BERT-based and large language models (LLMs). MARBERT demonstrates superior performance among the BERT-based models, achieving F1 and macro-F1 scores of 0.570 and 0.770, respectively. In contrast, Command R model outperforms all models with the highest overall F1 score of 0.661 and macro F1 score of 0.820.",
+    year = {2024},
+    address = {Bangkok, Thailand},
+    publisher = {Association for Computational Linguistics},
+    html = {https://aclanthology.org/2024.arabicnlp-1.92},
+    pages = {800--806},
+    selected=true,
+    abstract = {This paper presents our submission for the Stance Detection in Arabic Language (StanceEval) 2024 shared task conducted by Team SMASH of the University of Edinburgh. We evaluated the performance of various BERT-based and large language models (LLMs). MARBERT demonstrates superior performance among the BERT-based models, achieving F1 and macro-F1 scores of 0.570 and 0.770, respectively. In contrast, Command R model outperforms all models with the highest overall F1 score of 0.661 and macro F1 score of 0.820.},
 }
 
 
 @InProceedings{haririmagdywolters2019,
-author="Al Hariri, Youssef
-and Magdy, Walid
-and Wolters, Maria",
+author="Al Hariri, Youssef and Magdy, Walid and Wolters, Maria",
 editor="Weber, Ingmar
 and Darwish, Kareem M.
 and Wagner, Claudia
@@ -115,7 +113,7 @@ selected=true
 title = "Sustainability tweeting triumphs during the COP events: analyzing environmental, social, and governance (ESG) communication on Twitter",
 abstract = "Purpose: With the upcoming COP 28 event in the United Arab Emirates, this study delves into the tweeting behavior of firms during COP events. We analyze all ESG tweets throughout COP 26 and COP 27 events, aiming to unravel the intricate connections between social media communication, industry characteristics, and financial performance. Design/methodology/approach: this study adopts a grounded theory approach to gain insights into the ESG and sustainability-focused initiatives undertaken by companies on social media, with a specific focus on the discourse surrounding climate change issues. Employing social media analytics, we conducted an in-depth analysis of ESG-related tweets from S&P 500 firms to discern the nature of their reporting and examine potential correlations with financial performance using the higher Cumulative Abnormal Returns (CARs) model.Findings: Our research findings introduce four novel distinct groups—Unengaged, Catalysts, Cautious, and Shapers—based on firms' proactive or reactive sustainability communication patterns. Our results explore the potential impact of COP event locations on tweeting behavior, proposing that conferences held in different regions, such as Asia versus Europe, may elicit varied reactions from S&P 500 firms. In terms of legitimacy, the study finds no significant differences in tweeting characteristics between industries. However, it uncovers a correlation between firms' CARs and their membership in specific tweeting groups, emphasizing that financial performance is intricately linked to social media communication patterns. The results challenge the simplistic view that higher social media engagement leads to positive financial outcomes, suggesting instead that lower financial performance may drive firms to adopt more extreme communication patterns, possibly as a strategic move to enhance corporate legitimacy.",
 keywords = "environmental, social, and governance, ESG, socila media, Twitter, COP events, COP 28",
-author = "{El Alfy}, Amr and John Quigley and Leilei Tang and {Al Haririr}, Yousseff and Olaf Weber",
+author = "{El Alfy}, Amr and John Quigley and Leilei Tang and {Al Hariri}, Youssef and Olaf Weber",
 year = "2024",
 month = mar,
 day = "5",
