Adding English version of The lack of deep relationships in the age of social media

--- a/_posts/en-uk/2024-08-02-Families.md
+++ b/_posts/en-uk/2024-08-02-Families.md
@@ -15,4 +15,14 @@ images:
 
 
 
-Coming soon!
+Educational and psychological experts differentiate relationships as either superficial or deep. Alarmingly, some describe a superficial relationship as one where you need to ask the other party about regular details of their life, whether these details are important, urgent, or routine. This could be a parent asking their child about their meals or studies upon meeting them or children asking their parents about their meals or medications only upon seeing them instead of having an ongoing regular follow-up.
+
+Conversely, a deep relationship is one in which a person can always answer about it when they are with them, seeks answers when apart, and feels the need to meet or stay in touch with them most frequently. This is the deep relationship, where both parties feel a sense of belonging and constant connection.
+
+Shockingly, as presented above, most of our family relationships are superficial, even if we claim otherwise!
+
+Furthermore, in these times, we need to deepen our relationships with our children, parents, siblings and spouses. We should ask ourselves, when was the last time one of your children shared their thoughts openly without fear of the consequences? When was the last time you understood their needs without declaring it? And when did you last respond to your kid’s question with the utmost attention? When was the last time they noticed that they caught your attention? For example, you looked directly at them while they were asking, you received their question with interest as if it was from someone important, engaged with their inquiries, discussed their ideas and searched with them for answers to their questions.
+
+We may force ourselves to interact nicely with a child's question. Still, the discussion may soon turn into a heated debate, prompting the children to end the conversation or pretend they understood the answer. Often, this is because we expect reverence toward parents instead of merely respecting them, and this reverence is seen as an integral part of our duty to them. Thus, the children fear their parents, and through their experiences, they avoid discussing their secrets and problems with them, and the disaster is when this becomes widespread among the community. This results in fragmented families, connected only by necessity and need. Families lack a blessed good relationship, where children enjoy their time with their parents and vice versa. Suppose a son or daughter finds someone who provides them with perceived affection through social media, at school, or in the neighbourhood. In that case, they often gravitate towards them—not out of hatred for their families or ignorance of the dangers, but in search of affection and love and a deep relationship where they can act spontaneously and which responds to their inquiries and needs, even if it is illusory. Chasing mirages is typical of the thirsty. More sadly, children may grow distant from their parents and their siblings. After marriage, they become separate groups, brought together only on social occasions or by the minimum commitment enforced by law or traditions. The opportunity to build ties among and with them has passed, their needs have been satisfied by others, or it has been completely closed off, and this suffering may pass on to future generations.
+
+Note: this is a manually modified version of an English generated version of the Arabic article by using AI.
