Add TwiXplorer to the papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,19 @@
 @string{aps = {American Physical Society,}}
 
+@inproceedings{hariri-chausson-2024-twixplorer,
+    title = {TwiXplorer: An Interactive Tool for Narrative Detection and Analysis in Historic Twitter Data},
+    author = {Al Hariri, Youssef  and Sandrine Chausson and Björn Ross and Walid Magdy},
+    booktitle = {Companion of the 2024 Computer-Supported Cooperative Work and Social Computing (CSCW Companion ’24)},
+    month = nov,
+    year = {2024},
+    address = {San Jose, Costa Rica},
+    publisher = {ACM, New York, NY, USA},
+    html = {https://www.research.ed.ac.uk/en/publications/twixplorer-an-interactive-tool-for-narrative-detection-and-analys},
+    pages = {},
+    abstract = {},
+    selected=true,
+}
+
 @inproceedings{hariri-abu-farha-2024-smash,
     title = {SMASH at AraFinNLP2024: Benchmarking Arabic BERT Models on the Intent Detection},
     author = {Al Hariri, Youssef  and Abu Farha, Ibrahim},
