--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,15 +2,18 @@
 
 @inproceedings{hariri-chausson-2024-twixplorer,
     title = {TwiXplorer: An Interactive Tool for Narrative Detection and Analysis in Historic Twitter Data},
-    author = {Al Hariri, Youssef  and Sandrine Chausson and Björn Ross and Walid Magdy},
-    booktitle = {Companion of the 2024 Computer-Supported Cooperative Work and Social Computing (CSCW Companion ’24)},
+    author = {Al Hariri, Youssef and 
+    Chausson, Sandrine and 
+    Ross, Björn and
+    Magdy, Walid},
+    booktitle = {Companion Publication of the 2024 Conference on Computer-Supported Cooperative Work and Social Computing},
     month = nov,
     year = {2024},
     address = {San Jose, Costa Rica},
     publisher = {ACM, New York, NY, USA},
-    html = {https://www.research.ed.ac.uk/en/publications/twixplorer-an-interactive-tool-for-narrative-detection-and-analys},
-    pages = {},
-    abstract = {},
+    html = {https://doi.org/10.1145/3678884.3681815},
+    pages = {83-86},
+    abstract = {We present TwiXplorer, an interactive tool to explore and understand static Twitter (X) datasets. While obtaining new data from X has become more challenging for academics, there are still rich datasets available that have largely been untapped, for example, from the "The Twitter Stream Grab'' project at the Internet Archive. Accessing and exploring this historical Twitter data is crucial for researchers interested in studying the history of social media. Our system is more advanced and easy to use than existing options and demonstrates how AI can help and be integrated into a process to make sense of large datasets. The tool is accessed through a web-based dashboard and designed with interaction in mind: the analyst can iteratively explore the data instead of being presented with static reports. We make the tool fully open source.},
     selected=true,
 }
 
@@ -125,14 +128,14 @@ selected=true
 
 @article{d89a10c77ec644bbbd77eacb0e43899e,
 title = "Sustainability tweeting triumphs during the COP events: analyzing environmental, social, and governance (ESG) communication on Twitter",
-abstract = "Purpose: With the upcoming COP 28 event in the United Arab Emirates, this study delves into the tweeting behavior of firms during COP events. We analyze all ESG tweets throughout COP 26 and COP 27 events, aiming to unravel the intricate connections between social media communication, industry characteristics, and financial performance. Design/methodology/approach: this study adopts a grounded theory approach to gain insights into the ESG and sustainability-focused initiatives undertaken by companies on social media, with a specific focus on the discourse surrounding climate change issues. Employing social media analytics, we conducted an in-depth analysis of ESG-related tweets from S&P 500 firms to discern the nature of their reporting and examine potential correlations with financial performance using the higher Cumulative Abnormal Returns (CARs) model.Findings: Our research findings introduce four novel distinct groups—Unengaged, Catalysts, Cautious, and Shapers—based on firms' proactive or reactive sustainability communication patterns. Our results explore the potential impact of COP event locations on tweeting behavior, proposing that conferences held in different regions, such as Asia versus Europe, may elicit varied reactions from S&P 500 firms. In terms of legitimacy, the study finds no significant differences in tweeting characteristics between industries. However, it uncovers a correlation between firms' CARs and their membership in specific tweeting groups, emphasizing that financial performance is intricately linked to social media communication patterns. The results challenge the simplistic view that higher social media engagement leads to positive financial outcomes, suggesting instead that lower financial performance may drive firms to adopt more extreme communication patterns, possibly as a strategic move to enhance corporate legitimacy.",
+abstract = "Purpose: With the recent conclusion of the United Nations Conference of the Parties (COP) 28 in the United Arab Emirates, this study aims to investigate the tweeting behaviour of firms surrounding COP events. The authors analyse the environmental, social and governance (ESG) tweets from the COP 26 and COP 27 events, aiming to deepen the understanding of the complex relationships between social media communication, industry characteristics and financial performance. This timely analysis is critical for assessing how the latest global discussions on climate change are influencing corporate communication strategies on sustainability, offering fresh insights into the evolving dynamics of ESG engagement in the context of these pivotal international meetings. Design/methodology/approach: In this study, the authors embrace a grounded theory approach to gain insights into the ESG and sustainability initiatives presented by companies on social media, with an intensified focus on climate change discourse. Leveraging advanced social media analytics, this study expands its scope by conducting a thorough examination of ESG-related tweets from Standard and Poor’s (S&P) 500 companies. In addition, the authors explore the relationships between such communication efforts and financial performance, applying an advanced cumulative abnormal returns (CARs) model. This methodological enhancement enables a more sophisticated understanding of how ESG communication on Twitter correlates with, and potentially influences, a firm’s market valuation and financial health, offering invaluable insights into the strategic importance of digital sustainability discourse. Findings: The research findings introduce four novel distinct groups – Unengaged, Catalysts, Cautious and Shapers – based on firms’ proactive or reactive sustainability communication patterns. The results explore the potential impact of COP event locations on tweeting behaviour, proposing that conferences held in different regions, such as Asia versus Europe, may elicit varied reactions from S&P 500 firms. Despite no significant inter-industry differences in tweeting habits, the authors discover a significant link between firms’ financial metrics, specifically CARs, and their categorised communication styles. The results challenge the simplistic view that higher social media engagement leads to positive financial outcomes, suggesting instead that lower financial performance may drive firms to adopt more extreme communication patterns, possibly as a strategic move to enhance corporate legitimacy.",
 keywords = "environmental, social, and governance, ESG, socila media, Twitter, COP events, COP 28",
-author = "{El Alfy}, Amr and John Quigley and Leilei Tang and {Al Hariri}, Youssef and Olaf Weber",
+author = "El Alfy, Amr and John Quigley and Leilei Tang and Al Hariri, Youssef and Olaf Weber",
 year = "2024",
-month = mar,
-day = "5",
+month = nov,
+day = "44",
 language = "English",
-html = {https://pureportal.strath.ac.uk/en/publications/sustainability-tweeting-triumphs-during-the-cop-events-analyzing-},
+html = {https://doi.org/10.1108/JABS-01-2024-0032},
 selected=true
 }
 
@@ -151,7 +154,7 @@ selected=true
 
 
 @INPROCEEDINGS{8460401, 
-author={Mhaisen, Naram and Abazeed, Omran and Hariri, Youssef Al and Alsalemi, Abdullah and Halabi, Osama}, 
+author={Mhaisen, Naram and Abazeed, Omran and Al Hariri, Youssef and Alsalemi, Abdullah and Halabi, Osama}, 
 booktitle={2018 International Conference on Computer and Applications (ICCA)}, 
 title={Self-Powered IoT-Enabled Water Monitoring System}, 
 abstract= "While usable water on earth is sparse and costly to treat, statistics show excessive use worldwide. Penalties are issued to limit the excessive consumption; however, their impact is marginal as they do not identify the reason for the exorbitant consumption. Therefore, giving users the full awareness about their water consumption will greatly help in minimizing the water waste. This article aims to present a smart self-powered water monitoring system that leverages IoT and cloud computing. The system consists of an IoT device that can be installed at any water source, a cloud application to receive the data from the devices, and a mobile app to visualize the water consumption at every monitored source. This system gives the user the ability to identify the location and time of the excessive usage and leaks on the mobile phone. Experiment results confirm the self-powered premise of the solution. A prototype of mobile application and backend have been developed and tested.",
