Adding The Sociological Review paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,6 +17,26 @@
     selected=true,
 }
 
+@article{BrownlieJ2025,
+author = {Brownlie, J. and Al Hariri, Y. and Anderson, S.},
+title = {The ‘good story’ and kindness Twitter: Tales of hope and fears of dupery during Covid-19},
+year = {2025},
+issue_date = {February 2025},
+publisher = {SAGE Publications},
+address = {},
+volume = {0},
+number = {0},
+html = {https://doi.org/10.1177/00380261251315231},
+doi = {10.1177/00380261251315231},
+abstract = {There is a long history of investment in solidaristic stories in the face of social upheaval, threat or conflict, and this was especially evident in relation to Covid-19. This article examines the way that one such narrative – the idea of kindness – was drawn on by Twitter users during the pandemic. Setting it in the context of a wider cultural preoccupation with kindness that both predates and continues beyond the pandemic, we draw on empirical research to develop the concept of the ‘good story’: a compelling collective narrative about goodness that carries with it anxieties about authenticity and dupery. We argue that ambivalences are inherent in the good story but are especially prominent in an age of social upheaval, polarisation, digital interaction and uncertainty. Such ambivalences cannot be wished away but need to be worked with, theoretically and practically. The good story is one tool for beginning to do this.},
+journal = {The Sociological Review},
+month = {feb},
+articleno = {0},
+numpages = {21},
+keywords = {ambivalence, authenticity, dupery, good stories, kindness},
+selected=true
+}
+
 @inproceedings{hariri-abu-farha-2024-smash,
     title = {SMASH at AraFinNLP2024: Benchmarking Arabic BERT Models on the Intent Detection},
     author = {Al Hariri, Youssef  and Abu Farha, Ibrahim},
