--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,7 +19,7 @@
 
 @article{BrownlieJ2025,
 author = {Brownlie, J. and Al Hariri, Y. and Anderson, S.},
-title = {The ‘good story’ and kindness Twitter: Tales of hope and fears of dupery during Covid-19},
+title = {The good story and kindness Twitter: Tales of hope and fears of dupery during Covid-19},
 year = {2025},
 issue_date = {February 2025},
 publisher = {SAGE Publications},
