Adding The Sociological Review paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,11 +19,10 @@
 
 @article{BrownlieJ2025,
 author = {Brownlie, J. and Al Hariri, Y. and Anderson, S.},
-title = {The good story and kindness Twitter: Tales of hope and fears of dupery during Covid-19},
+title = {The ‘good story’ and kindness Twitter: Tales of hope and fears of dupery during Covid-19},
 year = {2025},
 issue_date = {February 2025},
 publisher = {SAGE Publications},
-address = {},
 volume = {0},
 number = {0},
 html = {https://doi.org/10.1177/00380261251315231},
