--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,6 +17,29 @@
     selected=true,
 }
 
+@article{article,
+author = {Chausson, Sandrine and Al Hariri, Youssef and Ross, Björn and Magdy, Walid},
+year = {2025},
+month = {06},
+pages = {},
+title = {SocioXplorer: An Interactive Tool for Topic and Network Analysis in Social Data},
+journal = {arXiv preprint arXiv:2506.18845},
+html = {https://doi.org/10.48550/arXiv.2506.18845},
+doi = {10.48550/arXiv.2506.18845}
+}
+
+
+
+@article{article,
+author = {Farrag, Dalia and Fadol, Yasir and Hariri, Youssef and Elalfy, Amr},
+year = {2025},
+month = {01},
+pages = {},
+title = {Harnessing Big Data for Soft Power: A Sentiment Analysis of FIFA Qatar 2022},
+journal = {Event Management},
+doi = {10.3727/152599525X17483017436823}
+}
+
 @article{BrownlieJ2025,
 author = {Brownlie, J. and Al Hariri, Y. and Anderson, S.},
 title = {The ‘good story’ and kindness Twitter: Tales of hope and fears of dupery during Covid-19},
